--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pandas = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -27,7 +28,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-pythonpath = "."
+pythonpath = "./test"
 addopts = "--doctest-modules"
 
 [tool.isort]
